--- a/presentation.tex
+++ b/presentation.tex
@@ -366,7 +366,7 @@
       \item $X$ is a set of states
       \item $\mu X. \phi$ is the minimal fixed point
       \item $vX. \phi$ is the maximal fixed point
-      \item minimal and maximal fixed point operators are each oter's duals
+      \item minimal and maximal fixed point operators are each other's duals
     \end{itemize}
     \begin{tabular}{cc}
       \begin{minipage}{.47\linewidth}
