--- a/presentation.tex
+++ b/presentation.tex
@@ -390,11 +390,18 @@
 
   \begin{frame}{µ-Calculus – Fixed Point Modalities}
     \begin{exampleblock}{example}
+      \begin{center}
+        \begin{tikzpicture}[font=\sffamily\scriptsize]
+          \node[vertex] (S) at (0, 0) {$s$};
+          \path[->, every loop/.style={looseness=15}] (S) edge  [loop above] node {$a$} ();
+        \end{tikzpicture}
+      \end{center}
       \begin{itemize}
-        \item $\mu X. \langle a \rangle X$ and $vX. \langle a \rangle X$
-        \item Do they hold for the state $s$?
+        \item Do $\mu X. \langle a \rangle X$ and $vX. \langle a \rangle X$ hold for the state $s$?
         \item states to consider: empty set $X = \emptyset$ and set of all states $X = \{s\}$
-        \item if $X = \emptyset$ then $false = \langle a \rangle false$, which is valid
+        \item if $X = \emptyset$ then $X = \langle a \rangle X$ reduces to $false = \langle a \rangle false$, which is valid
+        \item $\mu X. \langle a \rangle X$ is valid for all states in the empty set but not in $s$
+        \item $vX. \langle a \rangle X$ is valid for all states in the largest set $\{s\}$
       \end{itemize}
     \end{exampleblock}
   \end{frame}
