--- a/presentation.tex
+++ b/presentation.tex
@@ -389,7 +389,7 @@
   \end{frame}
 
   \begin{frame}{µ-Calculus – Fixed Point Modalities}
-    \begin{exampleblock}{example}
+    \begin{exampleblock}{Example}
       \begin{center}
         \begin{tikzpicture}[font=\sffamily\scriptsize]
           \node[vertex] (S) at (0, 0) {$s$};
