Fix layout by adding phantom text.

--- a/presentation.tex
+++ b/presentation.tex
@@ -235,9 +235,9 @@
 
         \\
 
-        $\langle{}a\rangle{}\phi$ & \valid & \invalid & \only<2->{\valid}   & \only<4->{\invalid} \\
+        $\langle{}a\rangle{}\phi$ & \valid & \invalid & \only<-1>{\phantom{\valid}}  \only<2->{\valid}   & \only<-3>{\phantom{\invalid}} \only<4->{\invalid} \\
 
-        $[a]\phi$                 & \valid & \invalid & \only<3->{\invalid} & \only<5->{\valid}   \\
+        $[a]\phi$                 & \valid & \invalid & \only<-2>{\phantom{\invalid}}\only<3->{\invalid} & \only<-4>{\phantom{\valid}}   \only<5->{\valid}   \\
       \end{tabular}
     }
   \end{frame}
