--- a/presentation.tex
+++ b/presentation.tex
@@ -19,6 +19,11 @@
 \definecolor{green}{RGB}{0,150,60}
 
 \usepackage{enumitem}
+\setitemize{
+  label=\usebeamerfont*{itemize item}
+  \usebeamercolor[fg]{itemize item}
+  \usebeamertemplate{itemize item}
+}
 
 \usepackage{amssymb}
 \usepackage{listings}
