Add last slide.

--- a/presentation.tex
+++ b/presentation.tex
@@ -483,4 +483,8 @@ init P;
       \item It was possible to damage two cars using the lift.
     \end{enumerate}
   \end{frame}
+
+  \begin{frame}[standout]
+    Questions?
+  \end{frame}
 \end{document}
