Fix Hennessy-Milner Logic.

--- a/presentation.tex
+++ b/presentation.tex
@@ -182,7 +182,7 @@
 
   \begin{frame}{µ-Calculus – Hennessy-Milner Logic}
     \begin{align*}
-      af ::= \alpha\ |\ true\ |\ false\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
+      \phi ::= true\ |\ false\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
     \end{align*}
     \begin{itemize}
       \item $\neg ,\ \land\ ,\ \lor$ and $\to$ as usual
