Add LTS to overview.

--- a/presentation.tex
+++ b/presentation.tex
@@ -59,6 +59,7 @@
   \begin{frame}{Outline}
     \begin{itemize}
       \item What is a Process Calculus?
+      \item LTS
       \item µ-Calculus
       \item ACP
       \item mCRL2
