Extend Hennessy-Milner Logic.

--- a/presentation.tex
+++ b/presentation.tex
@@ -186,6 +186,7 @@
       \phi ::= \mathit{true}\ |\ \mathit{false}\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
     \end{align*}
     \begin{itemize}
+      \item $\mathit{true}$ is true in each state of a process and $\mathit{false}$ is never true
       \item $\neg ,\ \land\ ,\ \lor$ and $\to$ as usual
       \item $\langle a \rangle \phi$ is valid whenever an $a-action$ can be performed such that $\phi$ is valid after this $a$ has been done
       \item $[a]\phi$ is valid when for every action $a$ that can be done, $\phi$ holds after doing that $a$
