--- a/report.tex
+++ b/report.tex
@@ -36,7 +36,7 @@
   transitions. If a state has more than one outgoing transition with the same label to different states, then it is nondeterministic. \\[12pt]
   A LTS is a tuple $(S, A, \to,s_0>)$ where: \\
 
-  \begin{itemize}
+  \begin{itemize}[noitemsep]
     \item $S$ is a set of states \\
     \item $A$ is a set of actions \\
     \item $\to\ \subseteq S \times A \times S$ is a transition relation \\
@@ -87,5 +87,52 @@
       \path[->] (b) edge  [bend left=90] node[below] {$\mathit{reset}$} (a);
     \end{tikzpicture}
   \end{center}
+
+  \subsection{Bisimulation}
+  Bisimulation is a binary relation between LTSs, where LTSs behave the same way in the sense
+  that one LTS simulates the other and vice versa. Bisimulation is not the only form of equivalence. We can further differentiate between
+
+  \begin{itemize}[noitemsep]
+    \item Trace equivalence: \\
+    Two LTSs are equivalent iff they can perform the same sequences of actions, starting from their initial states \\
+    \item Strong bisimilarity: \\
+    If one LTS can perform an action a then the other LTS must also be able to perform an action a in a way that the resulting states are again related. \\
+  \end{itemize}
+
+  Bisimilarity of two coffee machines: \\[18pt]
+  \resizebox{\textwidth}{!}{
+    \begin{tabular}{cc}
+        \begin{tikzpicture}[font=\sffamily\tiny]
+          \node[vertex] (P1) at (1.6, 3) {$P1$};
+          \node[vertex] (P2) at (1.6, 1.7) {$P2$};
+          \node[vertex] (P3) at (3.2, 0) {$P3$};
+          \node[vertex] (P4) at (0, 0) {$P4$};
+
+          \path[edge] (P1) edge node[fill=white] {$\mathit{insert\ coin}$} (P2);
+          \path[edge] (P2) edge node[fill=white] {$\mathit{choose\ coffee}$} (P3);
+          \path[edge] (P2) edge node[fill=white] {$\mathit{choose\ tea}$} (P4);
+          \path[edge] (P3) edge [bend right=40] node[fill=white] {$\mathit{pour\ coffee}$} (P1);
+          \path[edge] (P4) edge [bend left=40] node[fill=white] {$\mathit{pour\ tea}$} (P1);
+        \end{tikzpicture}
+        &
+        \begin{tikzpicture}[font=\sffamily\tiny]
+          \node[vertex] (Q1) at (1.6, 3) {$Q1$};
+          \node[vertex] (Q2) at (0, 1.7) {$Q2$};
+          \node[vertex] (Q3) at (3.2, 1.7) {$Q3$};
+          \node[vertex] (Q4) at (0, 0) {$Q4$};
+          \node[vertex] (Q5) at (3.2, 0) {$Q5$};
+
+          \path[edge] (Q1) edge node[fill=white] {$\mathit{insert\ coin}$} (Q2);
+          \path[edge] (Q1) edge node[fill=white] {$\mathit{insert\ coin}$} (Q3);
+          \path[edge] (Q2) edge node[label=left:$\mathit{choose\ tea}$] {} (Q4);
+          \path[edge] (Q3) edge node[label=right:$\mathit{choose\ coffee}$] {} (Q5);
+          \path[edge] (Q4) edge [bend right=25] node[fill=white] {$\mathit{pour\ tea}$} (Q1);
+          \path[edge] (Q5) edge [bend left=25]  node[xshift=7.5pt, yshift=-10pt, fill=white] {$\mathit{pour\ coffee}$} (Q1);
+        \end{tikzpicture}
+    \end{tabular}
+  } \\[8pt]
+
+  The two coffee machines in the figures above are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach sate $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
+  So the process of inserting a coin and then either getting a coffee or a tea is the same but the path on how we get there is different.
 
   \end{document}
