--- a/report.tex
+++ b/report.tex
@@ -135,4 +135,19 @@
   The two coffee machines in the figures above are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach sate $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
   So the process of inserting a coin and then either getting a coffee or a tea is the same but the path on how we get there is different.
 
+  \section{µ-Calculus}
+  As already mentioned before µ-Calculus is an integral part of $mcrl2$. µ-Calculus is an extension of propositional logic and therefore shares some similiarites. \\
+  Furthermore it is used to describe and verify properties of LTSs.
+
+  \subsection{Hennessy-Milner Logic}
+  \begin{align*}
+    \phi ::= \mathit{true}\ |\ \mathit{false}\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
+  \end{align*}
+  \begin{itemize}
+    \item $\mathit{true}$ is true in each state of a process and $\mathit{false}$ is never true
+    \item $\neg ,\ \land\ ,\ \lor$ and $\to$ as usual
+    \item $\langle a \rangle \phi$ is valid whenever an $a-action$ can be performed such that $\phi$ is valid after this $a$ has been done
+    \item $[a]\phi$ is valid when for every action $a$ that can be done, $\phi$ holds after doing that $a$
+  \end{itemize}
+
   \end{document}
