--- a/report.tex
+++ b/report.tex
@@ -133,7 +133,7 @@
     \end{tabular}
   } \\[8pt]
 
-  The two coffee machines in the figures above are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach sate $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
+  The two coffee machines in the figures above are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach state $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
   So the process of inserting a coin and then either getting a coffee or a tea is the same but the path on how we get there is different.
 
   \section{µ-Calculus}
