--- a/presentation.tex
+++ b/presentation.tex
@@ -2,6 +2,8 @@
 %
 \documentclass[aspectratio=1610]{beamer}
 
+\input{settings.tex}
+
 \usetheme{metropolis}
 
 \usepackage{fontspec}
@@ -10,37 +12,13 @@
 \usefonttheme{professionalfonts}
 \usepackage[familydefault,light]{Chivo}
 
-\usepackage{graphicx}
-\graphicspath{{assets/}}
 \usepackage[export]{adjustbox}
 
-\usepackage{color}
-\definecolor{red}{RGB}{200,50,0}
-\definecolor{green}{RGB}{0,150,60}
-
-\usepackage{enumitem}
 \setitemize{
   label=\usebeamerfont*{itemize item}
   \usebeamercolor[fg]{itemize item}
   \usebeamertemplate{itemize item}
 }
-
-\usepackage{amssymb}
-\usepackage{listings}
-
-\lstdefinelanguage{mCRL2}{
-  basicstyle=\ttfamily,
-  sensitive = true,
-  keywords={act, proc, init},
-  otherkeywords={+, .},
-  keywordstyle=\color{green},
-  comment=[l]{\%},
-  commentstyle=\color[rgb]{0.6,0.6,0.6}\itshape,
-}
-
-\usepackage{tkz-graph}
-\tikzset{vertex/.style = {shape=circle,draw,minimum size=1}}
-\tikzset{edge/.style = {->,> = latex'}}
 
 \hypersetup
 {
@@ -107,28 +85,11 @@
     \begin{tabular}{cc}
       \begin{minipage}{.5\linewidth}
         \centering
-        \begin{tikzpicture}[font=\sffamily\scriptsize]
-          \node[vertex] (a) at (0, 0) {};
-          \node[vertex] (b) at (1.8, 0) {};
-
-          \draw[edge] (0, 0.5) to (a);
-          \path[->] (a) edge  node[above] {$\mathit{set}$} (b);
-          \path[->] (b) edge  [loop above] node {$\mathit{alarm}$} ();
-          \path[->] (b) edge  [bend left=50] node[below] {$\mathit{reset}$} (a);
-        \end{tikzpicture}
+        \input{graphs/lts_1}
       \end{minipage}
       \begin{minipage}{.5\linewidth}
         \centering
-        \begin{tikzpicture}[font=\sffamily\scriptsize]
-          \node[vertex] (a) at (0, 0) {};
-          \node[vertex] (b) at (1.8, 0) {};
-          \node at (0, 1.1) {};
-
-          \draw[edge] (0, 0.5) to (a);
-          \path[->] (a) edge  node[above] {$\mathit{set}$} (b);
-          \path[->] (b) edge  [bend left=22] node[below] {$\mathit{alarm}$} (a);
-          \path[->] (b) edge  [bend left=90] node[below] {$\mathit{reset}$} (a);
-        \end{tikzpicture}
+        \input{graphs/lts_2}
       \end{minipage}
     \end{tabular}
   \end{frame}
@@ -148,37 +109,7 @@
   \begin{frame}{Bisimulation}
     Bisimilarity of two coffee machines: \\[24pt]
     \centering
-    \resizebox{\textwidth}{!}{
-      \begin{tabular}{cc}
-          \begin{tikzpicture}[font=\sffamily\tiny]
-            \node[vertex] (P1) at (1.6, 3) {$P1$};
-            \node[vertex] (P2) at (1.6, 1.7) {$P2$};
-            \node[vertex] (P3) at (3.2, 0) {$P3$};
-            \node[vertex] (P4) at (0, 0) {$P4$};
-
-            \path[edge] (P1) edge node[fill=bg] {$\mathit{insert\ coin}$} (P2);
-            \path[edge] (P2) edge node[fill=bg] {$\mathit{choose\ coffee}$} (P3);
-            \path[edge] (P2) edge node[fill=bg] {$\mathit{choose\ tea}$} (P4);
-            \path[edge] (P3) edge [bend right=40] node[fill=bg] {$\mathit{pour\ coffee}$} (P1);
-            \path[edge] (P4) edge [bend left=40] node[fill=bg] {$\mathit{pour\ tea}$} (P1);
-          \end{tikzpicture}
-          &
-          \begin{tikzpicture}[font=\sffamily\tiny]
-            \node[vertex] (Q1) at (1.6, 3) {$Q1$};
-            \node[vertex] (Q2) at (0, 1.7) {$Q2$};
-            \node[vertex] (Q3) at (3.2, 1.7) {$Q3$};
-            \node[vertex] (Q4) at (0, 0) {$Q4$};
-            \node[vertex] (Q5) at (3.2, 0) {$Q5$};
-
-            \path[edge] (Q1) edge node[fill=bg] {$\mathit{insert\ coin}$} (Q2);
-            \path[edge] (Q1) edge node[fill=bg] {$\mathit{insert\ coin}$} (Q3);
-            \path[edge] (Q2) edge node[label=left:$\mathit{choose\ tea}$] {} (Q4);
-            \path[edge] (Q3) edge node[label=right:$\mathit{choose\ coffee}$] {} (Q5);
-            \path[edge] (Q4) edge [bend right=25] node[fill=bg] {$\mathit{pour\ tea}$} (Q1);
-            \path[edge] (Q5) edge [bend left=25]  node[xshift=7.5pt, yshift=-10pt, fill=bg] {$\mathit{pour\ coffee}$} (Q1);
-          \end{tikzpicture}
-      \end{tabular}
-    }
+    \resizebox{\textwidth}{!}{\input{graphs/coffee_machines}}
   \end{frame}
 
   \begin{frame}{µ-Calculus – Hennessy-Milner Logic}
@@ -451,18 +382,7 @@
   \end{frame}
 
   \begin{frame}[fragile]{mCRL2: Syntax}
-    \begin{lstlisting}[language=mCRL2]
-% Actions
-act a, b, c, d, e;
-
-% Processes
-proc P = a . b . c;           % Sequence
-     Q = d + e;               % Alternative
-     R = (a + b) . c . d . e; % Alternative & Sequence
-
-% Specify that the process starts with process P.
-init P;
-    \end{lstlisting}
+    \input{listings/mcrl2_syntax}
   \end{frame}
 
   \begin{frame}[standout]
