--- a/report.tex
+++ b/report.tex
@@ -2,22 +2,12 @@
 %
 \documentclass{clseminar}
 
+\input{settings.tex}
+
 \usepackage[english]{babel}
 \usepackage{parskip}
 
-\usepackage{enumitem}
-
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{listings}
-
-\usepackage{color}
-\definecolor{red}{RGB}{200,50,0}
-\definecolor{green}{RGB}{0,150,60}
-
-\usepackage{tkz-graph}
-\tikzset{vertex/.style = {shape=circle,draw,minimum size=1}}
-\tikzset{edge/.style = {->,> = latex'}}
+\bibfile{references}
 
 \title{Process Calculi for Concurrency}
 \author{Markus Reiter, Michael Kaltschmid}
@@ -26,6 +16,7 @@
 \begin{document}
   \abstract{\input{abstract}}
   \maketitle
+  \newpage
   \tableofcontents
 
   \section{Introduction}
@@ -53,28 +44,11 @@
   \begin{tabular}{cc}
     \begin{minipage}{.5\linewidth}
       \centering
-      \begin{tikzpicture}[font=\sffamily\scriptsize]
-        \node[vertex] (a) at (0, 0) {};
-        \node[vertex] (b) at (1.8, 0) {};
-
-        \draw[edge] (0, 0.5) to (a);
-        \path[->] (a) edge  node[above] {$\mathit{set}$} (b);
-        \path[->] (b) edge  [loop above] node {$\mathit{alarm}$} ();
-        \path[->] (b) edge  [bend left=50] node[below] {$\mathit{reset}$} (a);
-      \end{tikzpicture}
+      \input{graphs/lts_1}
     \end{minipage}
     \begin{minipage}{.5\linewidth}
       \centering
-      \begin{tikzpicture}[font=\sffamily\scriptsize]
-        \node[vertex] (a) at (0, 0) {};
-        \node[vertex] (b) at (1.8, 0) {};
-        \node at (0, 1.1) {};
-
-        \draw[edge] (0, 0.5) to (a);
-        \path[->] (a) edge  node[above] {$\mathit{set}$} (b);
-        \path[->] (b) edge  [bend left=22] node[below] {$\mathit{alarm}$} (a);
-        \path[->] (b) edge  [bend left=90] node[below] {$\mathit{reset}$} (a);
-      \end{tikzpicture}
+      \input{graphs/lts_2}
     \end{minipage}
   \end{tabular} \\[12pt]
 
@@ -82,17 +56,7 @@
   Both LTSs are determistic since no state has more than one outgoing transition with the same label to a different state. However we can make the right LTS nondeterministic by drawing a loop on top of the alarm state as you can see in the figure below. \\
 
   \begin{center}
-    \begin{tikzpicture}[font=\sffamily\scriptsize]
-      \node[vertex] (a) at (0, 0) {};
-      \node[vertex] (b) at (1.8, 0) {};
-      \node at (0, 1.1) {};
-
-      \draw[edge] (0, 0.5) to (a);
-      \path[->] (a) edge  node[above] {$\mathit{set}$} (b);
-      \path[->] (b) edge  [bend left=22] node[below] {$\mathit{alarm}$} (a);
-      \path[->] (b) edge  [loop above] node {$\mathit{alarm}$} ();
-      \path[->] (b) edge  [bend left=90] node[below] {$\mathit{reset}$} (a);
-    \end{tikzpicture}
+    \input{graphs/lts_3}
   \end{center}
 
   \subsection{Bisimulation}
@@ -106,38 +70,11 @@
     If one LTS can perform an action a then the other LTS must also be able to perform an action a in a way that the resulting states are again related. \\
   \end{itemize}
 
-  Bisimilarity of two coffee machines: \\[18pt]
-  \resizebox{\textwidth}{!}{
-    \begin{tabular}{cc}
-        \begin{tikzpicture}[font=\sffamily\tiny]
-          \node[vertex] (P1) at (1.6, 3) {$P1$};
-          \node[vertex] (P2) at (1.6, 1.7) {$P2$};
-          \node[vertex] (P3) at (3.2, 0) {$P3$};
-          \node[vertex] (P4) at (0, 0) {$P4$};
-
-          \path[edge] (P1) edge node[fill=white] {$\mathit{insert\ coin}$} (P2);
-          \path[edge] (P2) edge node[fill=white] {$\mathit{choose\ coffee}$} (P3);
-          \path[edge] (P2) edge node[fill=white] {$\mathit{choose\ tea}$} (P4);
-          \path[edge] (P3) edge [bend right=40] node[fill=white] {$\mathit{pour\ coffee}$} (P1);
-          \path[edge] (P4) edge [bend left=40] node[fill=white] {$\mathit{pour\ tea}$} (P1);
-        \end{tikzpicture}
-        &
-        \begin{tikzpicture}[font=\sffamily\tiny]
-          \node[vertex] (Q1) at (1.6, 3) {$Q1$};
-          \node[vertex] (Q2) at (0, 1.7) {$Q2$};
-          \node[vertex] (Q3) at (3.2, 1.7) {$Q3$};
-          \node[vertex] (Q4) at (0, 0) {$Q4$};
-          \node[vertex] (Q5) at (3.2, 0) {$Q5$};
-
-          \path[edge] (Q1) edge node[fill=white] {$\mathit{insert\ coin}$} (Q2);
-          \path[edge] (Q1) edge node[fill=white] {$\mathit{insert\ coin}$} (Q3);
-          \path[edge] (Q2) edge node[label=left:$\mathit{choose\ tea}$] {} (Q4);
-          \path[edge] (Q3) edge node[label=right:$\mathit{choose\ coffee}$] {} (Q5);
-          \path[edge] (Q4) edge [bend right=25] node[fill=white] {$\mathit{pour\ tea}$} (Q1);
-          \path[edge] (Q5) edge [bend left=25]  node[xshift=7.5pt, yshift=-10pt, fill=white] {$\mathit{pour\ coffee}$} (Q1);
-        \end{tikzpicture}
-    \end{tabular}
-  } \\[8pt]
+  \begin{figure}[!ht]
+    \resizebox{\textwidth}{!}{\input{graphs/coffee_machines}}
+    \caption{Bisimilarity of two coffee machines.}
+    \label{fig:coffee_machines}
+  \end{figure}
 
   The two coffee machines in the figures above are trace equivalent but not strongly bisimilar because the resulting states are not related. As an example we can check what happens after inserting a coin. With the first coffee machine we reach state $P2$ and with the second coffee machine we reach either $Q2$ or $Q3$ depending on the choice of beverage.\\
   So the process of inserting a coin and then either getting a coffee or a tea is the same but the path on how we get there is different.
@@ -218,5 +155,68 @@
   In the first LTS a $a$ action is possible to a state where $\phi$ holds and therefore both $\langle{}a\rangle{}\phi$ and $[a]\phi$ are possible. \\
   In the second LTS there is no $a$ action to a state where $\phi$ holds and for that reason both $\langle{}a\rangle{}\phi$ and $[a]\phi$ are not possible. \\
   In the third LTS there is no $a$ action to a state where $\phi$ holds and an $a$ action to a state where $\phi$ does not holds and therefore $\langle{}a\rangle{}\phi$ is valid since there is at least one $a$ action that leads to a valid $\phi$ and $[a]\phi$ is not valid because not every $a$ action results in a valid $[a]\phi$. \\
-  In the fourth LTS there is no $a$ action at all and therefore $\langle{}a\rangle{}\phi$ is not valid because, because there needs to be an $a$ action that can be performed and $[a]\phi$ is valid, since there is no action that can be done. \\
+  In the fourth LTS there is no $a$ action at all and therefore $\langle{}a\rangle{}\phi$ is not valid because, because there needs to be an $a$ action that can be performed and $[a]\phi$ is valid, since there is no action that can be done.
+
+
+  \section{ACP}
+
+  ACP is the Algebra of Communicating Processes and is used to describe parallel and concurrent processes.
+
+  \cite{groote2014}
+
+  \section{mCRL2}
+
+  \textbf{mCRL2} is a toolset which is used for specifying and analysing behaviour of distributed systems and protocols. We chose this tool because it uses an ACP-like syntax for its formal specification language for processes as well as µ-Calculus for model checking.
+
+  Let's first take a look at the \textbf{mCRL2} syntax for specifying processes. Usually, a process specification file will have a file name of the form \texttt{*.mcrl2}.
+
+  \begin{figure}[!ht]
+    \input{listings/mcrl2_syntax}
+    \caption{The \textbf{mCRL2} process specification syntax.}
+    \label{fig:mcrl2_syntax}
+  \end{figure}
+
+  As you can see in the first line in \autoref{fig:mcrl2_syntax}, we specify all available actions using the \texttt{act} keyword. This relates to $a$ in the ACP syntax. Now that we have defined the actions, we can specify the process itself, or processes, if there are more than one. We do this using the \texttt{proc} keywords, followed by the name of the process. In \autoref{fig:mcrl2_syntax} we have three processes, \texttt{P}, \texttt{Q} and \texttt{R}. We then equate every process with a combination of actions, action sequences and action alternatives. In \textbf{mCRL2}, we use \texttt{.} to denote a sequence and \texttt{+} to denote an alternative. This means that process \texttt{P} is a sequence of actions \texttt{a}, \texttt{b} and \texttt{c}. Process \texttt{Q} is a choice between either action \texttt{d} or action \texttt{e}. And finally, process \texttt{R} is a choice betweeen action \texttt{a} and \texttt{b}, followed by \texttt{c}, \texttt{d} and \texttt{e}. Note the parentheses around \texttt{a + b}, since \texttt{.} binds stronger than \texttt{+}. Finally, the \texttt{init} keyword specifies the starting process, in this case \texttt{P}.
+
+  To demonstrate the power of ACP and µ-Calculus in combination with the \textbf{mCRL2} toolset, we will now look at an implementation of the two coffee machines (\autoref{fig:coffee_machines}) in \textbf{mCRL2}.
+
+  First, we have to define the actions for coffee machine 1.
+
+  \begin{lstlisting}[language=mCRL2]
+act insert_coin, choose_coffee, choose_tea,
+                   pour_coffee,   pour_tea;
+  \end{lstlisting}
+
+  The \texttt{insert\_coin} action is self-explanatory. \texttt{choose\_coffee} and \texttt{choose\_tea} denote the actions of pressing either the button for coffee, or the button for tea. And finally, \texttt{pour\_coffee} and \texttt{pour\_tea} denote the action of dispensing either coffee or tea.
+
+  Since coffee machine 2 is trace equivalent to coffee machine 1, it has the same actions.
+
+  Next, we define the process for coffee machine 1.
+
+  \begin{lstlisting}[language=mCRL2]
+proc P = insert_coin . (
+           choose_coffee . pour_coffee +
+           choose_tea . pour_tea
+         ) . P;
+  \end{lstlisting}
+
+  We start by inserting a coin (\texttt{insert\_coin}). Then, we are left with a choice between choosing coffee and pouring coffee or choosing tea and pouring tea. We see that choosing coffee or tea is tightly coupled to pouring it, since this is a choice between two sequences \texttt{(choose\_coffee . pour\_coffee)} and \texttt{(choose\_tea . pour\_tea)}. This is of course because we don't want the machine to dispense tea when in fact we chose coffee.
+
+  The last action is \texttt{P} itself, which results in a recursion. This is because we want the machine to be reusable.
+
+  We now define the process for coffee machine 2.
+
+  \begin{lstlisting}[language=mCRL2]
+proc Q = (
+           (insert_coin . choose_coffee . pour_coffee) +
+           (insert_coin . choose_tea . pour_tea)
+         ) . Q;
+  \end{lstlisting}
+
+  For this machine, we specify a process named \texttt{Q}. This process starts with a choice, which is either a sequence of inserting a coin, choosing coffee and pouring coffee or inserting a coin, choosing tea and pouring tea. In comparison to the first machine, the \texttt{insert\_coin} action is now part of the choice between coffee or tea.
+
+  \newpage
+
+  \appendix
+
 \end{document}
